adding-survey-questions

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         document.querySelector("body").classList.remove("sidebar-expanded");
       }
     </script>
+    <div id="overlays"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
