finishing surveys page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       }
     </script>
     <div id="overlays"></div>
+    <div id="confirmations"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
