--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/tablogo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Katie Kicks Cancer</title>
   </head>
   <body class="font-inter antialiased bg-slate-100 text-slate-600">
     <noscript>You need to enable JavaScript to run this app.</noscript>
