--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       }        
     </script>      
   </head>
-  <body class="font-inter antialiased bg-slate-100 dark:bg-slate-900 text-slate-600 dark:text-slate-400">
+  <body class="font-inter antialiased bg-gray-100 dark:bg-gray-900 text-gray-600 dark:text-gray-400">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <script>
         if (localStorage.getItem('sidebar-expanded') == 'true') {
